--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
@@ -52,6 +52,9 @@
 
 .title span {
   float: right;
+  font-size: 20px;
+  box-shadow: 2px 2px 2px 2px #8d8d8d inset;
+  padding: 1% 3%;
 }
 
 .checkout-details {
