--- a/src/app/components/chatbot/chat-body/chat-body.component.css
+++ b/src/app/components/chatbot/chat-body/chat-body.component.css
@@ -2,11 +2,11 @@
   width: 100%;
   height: 80%;
   overflow-y: auto;
-  border: 1px solid #ccc;
   display: block;
+  border: none;
 }
 
-.app-loader{
+.app-loader {
   position: fixed;
   padding-left: 35%;
   padding-right: 35%;
