--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -1,50 +1,189 @@
 .input-block {
   width: 100%;
-  height: 8%;
+  height: 10%;
+  bottom: 0;
   display: inline-block;
   background-color: #007bff;
-  padding: 1px;
+  border: none;
 }
 
-input {
+.inputWithMic {
+  width: 76%;
+  height: 96%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: left;
+}
+
+.input-box {
   float: left;
   font-size: 17px;
-  border-radius: 20px 0px 0px 20px;
+  border-radius: 30px 0px 0px 30px;
   border: none;
   border-width: 0ch;
-  width: 70%;
-  height: 50%;
-  margin: 2% 0% 2% 2%;
-  padding: 5%;
-}
-
-.text {
-  border-radius: 50px;
-  border: none;
-  float: right;
-  width: 10%;
-  height: 70%;
-  margin: 2%;
-  background-color: white;
-  color: #007bff;
-  padding: 5px;
+  width: 80%;
+  height: 40px;
 }
 
 .voice {
-  border-radius: 0px 20px 20px 0px;
+  border-radius: 0px 30px 30px 0px;
   display: inline-block;
   border: none;
   border-width: 0ch;
   width: 10%;
-  height: 70%;
-  margin: 2% 0%;
+  height: 40px;
   background-color: white;
   color: #007bff;
   padding: 3px 8px 3px 3px;
 }
 
+.voice img {
+  border: none;
+  max-width: 100%;
+  max-height: 100%;
+}
 
-img{
-  width: 60%;
-  height: 90%;
+.send {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: right;
+  border: none;
+}
+
+.text {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: white;
+  color: #007bff;
+}
+
+.text img {
+  max-width: 70%;
+  max-height: 70%;
+}
+
+@media screen and (min-width: 320px) {
+  .header {
+    width: 100%;
+    height: 20%;
+  }
+  .text {
+    width: 40px;
+    height: 40px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 411px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 50px;
+    height: 50px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 50px;
+    height: 50px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 50px;
+    height: 50px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 50px;
+    height: 50px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 40px;
+    height: 40px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 40px;
+    height: 40px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
+}
+
+@media screen and (min-width: 1281px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .text {
+    width: 40px;
+    height: 40px;
+  }
+  .input-box {
+    width: 80%;
+    padding: 2%;
+  }
 }
