--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -1,64 +1,125 @@
 .header {
-  border: 1px solid #ccc;
   width: 100%;
   height: 10%;
+  top: 0;
   display: inline-block;
   background-color: #007bff;
+  min-height: 60px;
+  border: none;
+}
+
+.profilePic {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  float: left;
 }
 
 img {
-  padding: 1%;
-  width: 15%;
-  max-width: 100%;
+  max-width: 90%;
+  max-height: 90%;
   border-radius: 50%;
+}
+
+.bankName {
+  width: 35%;
+  height: 100%;
+  margin-left: 5%;
   float: left;
+  display: flex;
+  align-items: center;
 }
 
-h1 {
-  width: 50%;
-  float: left;
-  font-size: 20px;
+.bankName h4 {
+  margin: 0%;
+  font-family: arial;
   color: #fff;
-  padding: 2%;
 }
 
-h3 {
-  color: #fff;
-  margin-top: 3%;
-  font-size: 16px;
+.user-details {
+  width: 38%;
+  height: 100%;
+  margin-right: 2%;
+  float: right;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
-h4 {
+.details {
+  display: block;
+  text-align: center;
+}
+
+.details p {
+  font-family: arial;
   color: #fff;
+  margin: 0%;
+}
+
+.username {
+  line-height: 20px;
+  font-size: 14px;
+}
+
+.points {
   font-size: 12px;
 }
 
-@media (min-width: 600px) {
+@media screen and (min-width: 320px) {
   .header {
     width: 100%;
     height: 10%;
-  }
-
-  img {
-    padding: 1%;
-    width: 11%;
-    max-width: 100%;
-    border-radius: 50%;
-    float: left;
   }
 }
 
-@media (min-width: 1281px) {
+@media screen and (min-width: 411px) {
   .header {
     width: 100%;
     height: 10%;
   }
+}
 
-  img {
-    padding: 1%;
-    width: 11%;
-    max-width: 100%;
-    border-radius: 50%;
-    float: left;
+@media screen and (min-width: 481px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+}
+
+@media screen and (min-width: 1281px) {
+  .header {
+    width: 100%;
+    height: 10%;
   }
 }
