--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,8 +1,16 @@
 <div class="header">
-  <img
-    src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
-  />
-  <h1>{{this._stateService.bankName}}</h1>
-  <h3>{{this._stateService.userFirstName}}</h3>
-  <h4>{{this._stateService.pointBalance}}</h4>
+  <div class="profilePic">
+    <img
+      src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
+    />
+  </div>
+  <div class="bankName">
+    <h4>{{ this._stateService.bankName }}</h4>
+  </div>
+  <div class="user-details">
+    <div class="details">
+      <p class="username">{{ this._stateService.userFirstName }}</p>
+      <p class="points">{{ this._stateService.pointBalance }}</p>
+    </div>
+  </div>
 </div>
