--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
@@ -29,8 +29,8 @@
         <p>Date : {{ data["date"].split("T")[0] }}</p>
         <p>Time : {{ data["time"] }}</p>
       </div>
-      <hr />
-      <div class="billing-details">
+      <hr *ngIf="!isErrorDetected" />
+      <div *ngIf="!isErrorDetected" class="billing-details">
         <p class="sectionHeading">Billing Details :</p>
         <p>
           Available Point Balance : <span>{{pointBalance }}</span>
