--- a/src/app/components/chatbot/chat-body/chat-body.component.html
+++ b/src/app/components/chatbot/chat-body/chat-body.component.html
@@ -1,4 +1,5 @@
 <div class="msg-page" id="msg-page">
+  <app-menu></app-menu>
   <ng-template #chatContainer></ng-template>
   <div class="app-loader">
     <app-loader></app-loader>
